--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,8 @@
         </nav>
         <div id="mobile-menu-wrap"></div>
         <div class="canvas-social">
-<!--            <a href="#"><i class="fa fa-facebook"></i></a>-->
+            <a href="#"><i class="fa fa-user"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-tiktok"></i></a>
 <!--            <a href="#"><i class="fa fa-youtube-play"></i></a>-->
             <a href="#"><i class="fa fa-instagram"></i></a>
