--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Login V2</title>
+  <title>Grit - Signup</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--===============================================================================================-->
@@ -41,6 +41,15 @@
                           <img src="img/logo2.png" alt="" height="70" width="250">
                         </a>
 					</span>
+
+	      <div class="wrap-input100 validate-input">
+		      <input class="input100" type="text" name="firstName">
+		      <span class="focus-input100" data-placeholder="First Name"></span>
+	      </div>
+	      <div class="wrap-input100 validate-input">
+		      <input class="input100" type="text" name="lastName">
+		      <span class="focus-input100" data-placeholder="Last Name"></span>
+	      </div>
 
         <div class="wrap-input100 validate-input" data-validate = "Valid email is: username@gmail.com">
           <input class="input100" type="text" name="email">
