--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,102 +1,281 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-	<title>Login V2</title>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fontz/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fontz/iconic/css/material-design-iconic-font.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--===============================================================================================-->
+	<meta name="description" content="Gym Template">
+	<meta name="keywords" content="Gym, unica, creative, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Grit - Strength</title>
+
+	<!-- Google Font -->
+	<link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
+
+	<!-- Css Styles -->
+	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+	<!--    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">-->
+	<script src="https://kit.fontawesome.com/0ef1cecb74.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/flaticon.css" type="text/css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
+	<link rel="stylesheet" href="css/barfiller.css" type="text/css">
+	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
+	<link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
+
 <body>
-	
-	<div class="limiter">
-		<div class="container-login100">
-			<div class="wrap-login100">
-				<form class="login100-form validate-form">
-					<span class="login100-form-title p-b-26">
-						Welcome
-					</span>
-					<span class="login100-form-title p-b-48">
-						<a href="/">
-                          <img src="img/logo2.png" alt="" height="70" width="250">
-                        </a>
-					</span>
+<!-- Page Preloder -->
+<div id="preloder">
+	<div class="loader"></div>
+</div>
 
-					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
-						<input class="input100" type="text" name="email">
-						<span class="focus-input100" data-placeholder="Email"></span>
+<!-- Offcanvas Menu Section Begin -->
+<div class="offcanvas-menu-overlay"></div>
+<div class="offcanvas-menu-wrapper">
+	<div class="canvas-close">
+		<i class="fa fa-close"></i>
+	</div>
+	<div class="canvas-search search-switch">
+		<i class="fa fa-search"></i>
+	</div>
+	<nav class="canvas-menu mobile-menu">
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="/about-us">About Us</a></li>
+			<li><a href="/classes">Programs</a></li>
+			<li><a href="/services">Services</a></li>
+			<li><a href="/team">Our Team</a></li>
+			<li><a href="#">Pages</a>
+				<ul class="dropdown">
+					<li><a href="/about-us">About us</a></li>
+					<li><a href="/class-timetable">Programs timetable</a></li>
+					<li><a href="/bmi-calculator">Bmi calculate</a></li>
+					<li><a href="/team">Our team</a></li>
+					<li><a href="/gallery">Gallery</a></li>
+					<li><a href="/blog">Our blog</a></li>
+					<li><a href="/404">404</a></li>
+				</ul>
+			</li>
+			<li><a href="/contact">Contact</a></li>
+		</ul>
+	</nav>
+	<div id="mobile-menu-wrap"></div>
+	<div class="canvas-social">
+
+		<a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+		<a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+		<a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
+		<a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
+	</div>
+</div>
+<!-- Offcanvas Menu Section End -->
+
+<!-- Header Section Begin -->
+<header class="header-section">
+	<div class="container-fluid">
+		<div class="row" style="padding-top:0px">
+			<div class="col-lg-3" style="padding-left:50px;">
+				<div class="logo">
+					<a href="/">
+						<img src="img/logo2.png" alt="" style="height: 65px;">
+					</a>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<nav class="nav-menu">
+					<ul>
+						<li><a href="/">Home</a></li>
+						<li><a href="/about-us">About Us</a></li>
+						<li><a href="/class-details">Programs</a></li>
+						<li><a href="/services">Services</a></li>
+						<li><a href="/team">Our Team</a></li>
+						<li><a href="#">Pages</a>
+							<ul class="dropdown">
+								<li><a href="/about-us">About us</a></li>
+								<li><a href="/class-timetable">Programs timetable</a></li>
+								<li><a href="/bmi-calculator">Bmi calculate</a></li>
+								<li><a href="/team">Our team</a></li>
+								<li><a href="/gallery">Gallery</a></li>
+								<li><a href="/blog">Our blog</a></li>
+								<li><a href="/404">404</a></li>
+							</ul>
+						</li>
+						<li class="active"><a href="contact">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="col-lg-3">
+				<div class="top-option">
+					<div class="to-search search-switch">
+						<i class="fa fa-search"></i>
 					</div>
-
-					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<span class="btn-show-pass">
-							<i class="zmdi zmdi-eye"></i>
-						</span>
-						<input class="input100" type="password" name="pass">
-						<span class="focus-input100" data-placeholder="Password"></span>
+					<div class="to-social">
+						<a href="http://www.tiktok.com/@_.grit" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+						<a href="https://www.youtube.com/channel/UCUYuMr4KH_-w4cTMOZZp8CA" target="_blank"><i class="fa fa-youtube-play"></i></a>
+						<a href="https://www.instagram.com/grit.dominate/" target="_blank"><i class="fa fa-instagram"></i></a>
+						<a href="https://m.facebook.com/grit.dominate"><i class="fa fa-facebook"></i></a>
 					</div>
+				</div>
+			</div>
+		</div>
+		<div class="canvas-open">
+			<i class="fa fa-bars"></i>
+		</div>
+	</div>
+</header>
+<!-- Header End -->
 
-					<div class="container-login100-form-btn">
-						<div class="wrap-login100-form-btn">
-							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn">
-								Login
-							</button>
-						</div>
+<!-- Breadcrumb Section Begin -->
+<section class="breadcrumb-section set-bg" data-setbg="img/banner-bg.jpg">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<div class="breadcrumb-text">
+					<h2>Train With Grit</h2>
+					<div class="bt-option">
+						<a href="/index">Home</a>
+						<a href="#">Pages</a>
+						<span>Registration</span>
 					</div>
-
-					<div class="text-center p-t-115">
-						<span class="txt1">
-							Don’t have an account?
-						</span>
-
-						<a class="txt2" href="/signup">
-							Sign Up
-						</a>
-					</div>
-				</form>
+				</div>
 			</div>
 		</div>
 	</div>
-	
+</section>
+<!-- Breadcrumb Section End -->
 
-	<div id="dropDownSelect1"></div>
-	
-<!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/animsition/js/animsition.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/daterangepicker/moment.min.js"></script>
-	<script src="vendor/daterangepicker/daterangepicker.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/countdowntime/countdowntime.js"></script>
-<!--===============================================================================================-->
-	<script src="js/main2.js"></script>
+<!-- Contact Section Begin -->
+<section class="contact-section spad">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6">
+				<div class="section-title contact-title">
+					<span>Registration</span>
+					<h2>TRAIN WITH GRIT</h2>
+				</div>
+				<div class="contact-widget">
+					<div class="cw-text">
+						<i class="fa fa-map-marker"></i>
+						<p>Manila, Philippines<br/></p>
+					</div>
+					<div class="cw-text">
+						<i class="fa fa-mobile"></i>
+						<ul>
+							<li>+63 956 650 1830</li>
+<!--							<li>125-668-886</li>-->
+						</ul>
+					</div>
+					<div class="cw-text email">
+						<i class="fa fa-envelope"></i>
+						<p>gritdominate@gmail.com</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-6">
+				<div class="leave-comment">
+					<form th:action="@{/sendEmail}" method="post">
+						<input type="text" id="firstName" name="firstName" placeholder="First Name">
+						<input type="text" id="lastName" name="lastName" placeholder="Last Name">
+						<div class="row">
+							<div class="col-sm-6">
+								<input type="text" id="height" name="height" placeholder="Height / cm">
+							</div>
+							<div class="col-sm-6">
+								<input type="text" id="weight" name="weight" placeholder="Weight / kg">
+							</div>
+							<div class="col-sm-6">
+								<input type="text" id="age" name="age" placeholder="Age">
+							</div>
+							<div class="col-sm-6">
+								<input type="text" id="sex" name="sex" placeholder="Sex">
+							</div>
+						</div>
+						<input type="text" id="explainExperience" name="explainExperience" placeholder="Explain to me your experience level">
+
+						<input type="text" id="fitnessRoutine" name="fitnessRoutine" placeholder="What is your current fitness routine?">
+						<input type="text" id="diet" name="diet" placeholder="What does your current diet look like?">
+						<input type="text" id="injuries" name="injuries"placeholder="Any previous/present injuries? Briefly state">
+						<input type="text" id="struggles" name="struggles" placeholder="What are your current struggles?">
+						<input type="text" id="whyStart" name="whyStart" placeholder="Why do you want to start this journey?">
+						<input type="text" id="driven" name="driven" placeholder="Do you consider yourself a driven person?">
+						<input type="email" id="email" name="email" placeholder="Email">
+						<input type="text" id="phoneNumber" name="phoneNumber" placeholder="Phone Number">
+						<textarea id="otherInfo" name="otherInfo" placeholder="Other information you want me to know"></textarea>
+						<button type="submit">Submit</button>
+					</form>
+				</div>
+			</div>
+		</div>
+<!--		<div class="map">-->
+<!--			<iframe-->
+<!--					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12087.069761554938!2d-74.2175599360452!3d40.767139456514954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c254b5958982c3%3A0xb6ab3931055a2612!2sEast%20Orange%2C%20NJ%2C%20USA!5e0!3m2!1sen!2sbd!4v1581710470843!5m2!1sen!2sbd"-->
+<!--					height="550" style="border:0;" allowfullscreen=""></iframe>-->
+<!--		</div>-->
+	</div>
+</section>
+<!-- Contact Section End -->
+
+<!-- Get In Touch Section Begin -->
+<div class="gettouch-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<div class="gt-text">
+					<i class="fa fa-map-marker"></i>
+					<p>Manila, Philippines</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="gt-text">
+					<i class="fa fa-mobile"></i>
+					<ul>
+						<li>+63 956 650 1830</li>
+						<!--                            <li>125-668-886</li>-->
+					</ul>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="gt-text email">
+					<i class="fa fa-envelope"></i>
+					<p>gritdominate@gmail.com</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- Get In Touch Section End -->
+
+<!-- Footer Section Begin -->
+<section class="footer-section" th:replace="footer">
+</section>
+<!-- Footer Section End -->
+
+<!-- Search model Begin -->
+<div class="search-model">
+	<div class="h-100 d-flex align-items-center justify-content-center">
+		<div class="search-close-switch">+</div>
+		<form class="search-model-form">
+			<input type="text" id="search-input" placeholder="Search here.....">
+		</form>
+	</div>
+</div>
+<!-- Search model end -->
+
+<!-- Js Plugins -->
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/masonry.pkgd.min.js"></script>
+<script src="js/jquery.barfiller.js"></script>
+<script src="js/jquery.slicknav.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
+
+
 
 </body>
+
 </html>
